First Front design added

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,6 +7,6 @@
 @tailwind utilities; // Tailwind utility styles
 
 // Estilos personalizados
-body {
-    @apply bg-red-100; // Utiliza las utilidades de Tailwind para aplicar estilos
-}
+// body {
+//     @apply bg-red-100; // Utiliza las utilidades de Tailwind para aplicar estilos
+// }
